operator/pkg/gateway-api/testdata/gateway/listenerset-listenerset-without-reference-grant/output/listenerset-listenerset-without-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: "2024-01-01T00:00:00Z"
  name: listenerset-without-reference-grant
  namespace: listenerset-refgrant-ns
  resourceVersion: "999"
spec:
  listeners:
  - hostname: without-grant.example.com
    name: listenerset-without-reference-grant-listener
    port: 9443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-passthrough-checks-certificate
        namespace: gateway-conformance-app-backend
      mode: Terminate
  parentRef:
    name: gateway-listenerset-without-reference-grant
    namespace: gateway-conformance-infra
status:
  conditions:
  - lastTransitionTime: "2025-07-01T00:00:00Z"
    message: No valid listeners
    reason: ListenersNotValid
    status: "False"
    type: Accepted
  - lastTransitionTime: "2025-07-01T00:00:00Z"
    message: No valid listeners
    reason: ListenersNotValid
    status: "False"
    type: Programmed
  listeners:
  - attachedRoutes: 0
    conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: CertificateRef is not permitted
      reason: RefNotPermitted
      status: "False"
      type: ResolvedRefs
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: Listener not valid. Invalid CertificateRef, not permitted.
      reason: Invalid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: Listener not valid
      reason: Invalid
      status: "False"
      type: Programmed
    name: listenerset-without-reference-grant-listener
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
